--- a/models.ipynb
+++ b/models.ipynb
@@ -2163,7 +2163,7 @@
         "id": "L5MlJ1yDgg92"
       },
       "source": [
-        "## With reward shaping as recommended by docs"
+        "## Changing reward function"
       ]
     },
     {
