--- a/models.ipynb
+++ b/models.ipynb
@@ -5929,12 +5929,11 @@
         "  for p in ax.patches:\n",
         "    bar_value = p.get_width()\n",
         "    ax.text(\n",
-        "      bar_value, p.get_y() + p.get_height() / 2, f'{bar_value:.2f}',\n",
+        "      bar_value, p.get_y() + p.get_height()/2, f'{bar_value:.2f}',\n",
         "      va='center',\n",
         "      ha='left'\n",
         "    )\n",
         "g.set_axis_labels(\"Value\", \"Building Name\")\n",
-        "g.set_titles(\"KPI: {col_name}\")\n",
         "\n",
         "plt.suptitle('Building KPIs by Environment', y=1.05, fontsize=16)\n",
         "plt.savefig('building_kpi_after.png',dpi=900,bbox_inches='tight')\n",
@@ -6079,19 +6078,10 @@
         }
       ],
       "source": [
-        "row_count = 1\n",
-        "column_count = 1\n",
-        "env_count = len(envs)\n",
-        "kpi_count = len(data['kpi'].unique())\n",
-        "# figsize = (6.0 * column_count, 0.225 * env_count * kpi_count * row_count)\n",
         "figsize = (6,4)\n",
-        "fig, ax = plt.subplots(row_count, column_count, figsize=figsize)\n",
+        "fig, ax = plt.subplots(1, 1, figsize=figsize)\n",
         "\n",
         "sns.barplot(x='value', y='kpi', data=data, hue='env', ax=ax)\n",
-        "\n",
-        "# # Add a vertical line at x = 1.0 for baseline reference\n",
-        "# ax.axvline(1.0, color='black', linestyle='--', label='Baseline')\n",
-        "\n",
         "ax.set_xlabel(None)\n",
         "ax.set_ylabel(None)\n",
         "\n",
@@ -6101,8 +6091,8 @@
         "for p in ax.patches:\n",
         "  ax.text(\n",
         "      p.get_x() + p.get_width(),\n",
-        "      p.get_y() + p.get_height() / 2.0,\n",
-        "      f'{p.get_width():.3f}',  # Format value to three decimal places\n",
+        "      p.get_y() + p.get_height()/2,\n",
+        "      f'{p.get_width():.3f}',\n",
         "      ha='left',\n",
         "      va='center'\n",
         "  )\n",
