--- a/models.ipynb
+++ b/models.ipynb
@@ -2168,34 +2168,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 317,
-      "metadata": {
-        "id": "IPoM1_sUggGY"
-      },
-      "outputs": [],
-      "source": [
-        "class NewReward(RewardFunction):\n",
-        "    def __init__(self, env: CityLearnEnv):\n",
-        "        super().__init__(env)\n",
-        "\n",
-        "    def calculate(self) -> List[float]:\n",
-        "        reward_list = []\n",
-        "\n",
-        "        for b in self.env.buildings:\n",
-        "            cost = b.net_electricity_consumption_cost[-1]\n",
-        "            battery_capacity = b.electrical_storage.capacity_history[0]\n",
-        "            battery_soc = b.electrical_storage.soc[-1]/battery_capacity\n",
-        "            penalty = -(1.0 + np.sign(cost)*battery_soc)\n",
-        "            reward = penalty*abs(cost)\n",
-        "            reward_list.append(reward)\n",
-        "        ## summing the rewards cause it is a central agent\n",
-        "        reward = [sum(reward_list)]\n",
-        "\n",
-        "        return reward"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 318,
       "metadata": {
         "colab": {
@@ -2227,7 +2199,7 @@
       ],
       "source": [
         "sac2_env = CityLearnEnv(schema)\n",
-        "sac2_env.reward_function = NewReward(sac2_env)\n",
+        "sac2_env.reward_function = SolarPenaltyReward(sac2_env)\n",
         "sac2_env = NormalizedObservationWrapper(sac2_env)\n",
         "sac2_env = StableBaselines3Wrapper(sac2_env)\n",
         "sac_model2 = SAC(policy='MlpPolicy', env=sac2_env, seed=0)"
@@ -3734,34 +3706,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 334,
-      "metadata": {
-        "id": "GqYYW1mwbKZP"
-      },
-      "outputs": [],
-      "source": [
-        "class RewardA2C(RewardFunction):\n",
-        "  def __init__(self, env: CityLearnEnv):\n",
-        "    super().__init__(env)\n",
-        "\n",
-        "  def calculate(self) -> List[float]:\n",
-        "    reward_list = []\n",
-        "\n",
-        "    for b in self.env.buildings:\n",
-        "      cost = b.net_electricity_consumption_cost[-1]\n",
-        "      battery_capacity = b.electrical_storage.capacity_history[0]\n",
-        "      battery_soc = b.electrical_storage.soc[-1]/battery_capacity\n",
-        "      penalty = -(1.0 + np.sign(cost)*battery_soc)\n",
-        "      reward = penalty*abs(cost)\n",
-        "      reward_list.append(reward)\n",
-        "    ## summing the rewards cause it is a central agent\n",
-        "    reward = [sum(reward_list)]\n",
-        "\n",
-        "    return reward"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 335,
       "metadata": {
         "colab": {
@@ -3797,7 +3741,7 @@
       ],
       "source": [
         "ac2_env = CityLearnEnv(schema)\n",
-        "ac2_env.reward_function = RewardA2C(ac2_env)\n",
+        "ac2_env.reward_function = SolarPenaltyReward(ac2_env)\n",
         "ac2_env = NormalizedObservationWrapper(ac2_env)\n",
         "ac2_env = StableBaselines3Wrapper(ac2_env)\n",
         "\n",
@@ -5110,7 +5054,7 @@
       ],
       "source": [
         "ppo_env2 = CityLearnEnv(schema)\n",
-        "ppo_env2.reward_function = NewReward(ppo_env2)\n",
+        "ppo_env2.reward_function = SolarPenaltyReward(ppo_env2)\n",
         "# ppo_env2.reward_function = SolarPenaltyReward(ppo_env)\n",
         "ppo_env2 = NormalizedObservationWrapper(ppo_env2)\n",
         "ppo_env2 = StableBaselines3Wrapper(ppo_env2)\n",
@@ -5897,18 +5841,9 @@
         "\n",
         "data = pd.concat(kpis_list)\n",
         "fig = px.bar(\n",
-        "    data,\n",
-        "    x='value',\n",
-        "    y='name',\n",
-        "    color='env',\n",
-        "    orientation='h',\n",
-        "    barmode='group',\n",
-        "    facet_col='kpi',\n",
-        "    title='District KPIs by Environment',\n",
-        "    width=1300,\n",
-        "    height=400,\n",
-        "    facet_row_spacing=0.1,\n",
-        "    text='value',\n",
+        "    data,x='value',y='name',color='env',orientation='h',barmode='group',\n",
+        "    facet_col='kpi',title='District KPIs by Environment',width=1300,\n",
+        "    height=400,facet_row_spacing=0.1,text='value',\n",
         "    labels={'value': 'Value', 'kpi': 'KPI', 'env': 'Environment'}\n",
         ")\n",
         "\n",
